--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
   "devDependencies": {
     "jest": "23.6.0"
+  },
+  "jest": {
+    "preset": "jest-puppeteer"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "dependencies": {
+    "jest-puppeteer": "3.5.2",
+    "puppeteer": "1.11.0"
   }
 }
